--- a/src/common/header/header.css
+++ b/src/common/header/header.css
@@ -18,7 +18,6 @@
 }
 
 .profileLogo{
-    border: black 2px solid;
     width: 50px;
     height: 50px;
     background-size: contain;
@@ -27,3 +26,6 @@
     background-image: url("../../assets/upGradLogo.png");
 }
 
+#loggedInUserSection{
+    display: contents;
+}
