--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,4 +1,29 @@
 .ReactSearchBox{
     background-color: black;
+}
 
+#imageCardsContainer{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.imageCard{
+    width: 48%;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    
+}
+
+.pofileIcon{
+    width: 50px;
+    height: 50px;
+    background-size: contain;
+    border: transparent;
+    cursor: pointer;
+    background-image: url("../../assets/profileLogo.png");
 }
